Fixed overflow book title issue

--- a/front-angular/src/app/booklist/booklist.component.css
+++ b/front-angular/src/app/booklist/booklist.component.css
@@ -201,6 +201,9 @@ li {
 .mainbooks .books .listingbooks .onebook a h4 {
   margin: 20px 0;
   color: #000000;
+  overflow: hidden;
+  max-width: 60ch;
+  max-height: 4.5ch;
 }
 
 .mainbooks .books .mainpagination {
