--- a/front-angular/src/app/home/home.component.css
+++ b/front-angular/src/app/home/home.component.css
@@ -141,4 +141,7 @@ li {
 .mainpostbg .mainpost .postedbooks .onebook a h4 {
   margin: 20px 0;
   color: #000000;
+  overflow: hidden;
+  max-width: 60ch;
+  max-height: 7ch;
 }
