--- a/front-angular/src/app/profile/profile.component.css
+++ b/front-angular/src/app/profile/profile.component.css
@@ -1,3 +1,11 @@
+a {
+  text-decoration: none;
+}
+
+li {
+  list-style: none;
+}
+
 .mainsectionbg {
   width: auto;
   height: 1000px;
@@ -81,4 +89,7 @@
 .mainsectionbg .mainsection .booksection .for2 .onebook a h4 {
   margin: 20px 0;
   color: #000000;
+  overflow: hidden;
+  max-width: 60ch;
+  max-height: 7ch;
 }
